parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr04.wacc
# type mismatch: bool <- int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = 1
end
